[workspace]
members  = ["crates/*", "xtask/benchmark", "xtask"]
resolver = "2"                                      # See https://doc.rust-lang.org/cargo/reference/resolver.html#feature-resolver-version-2

[workspace.package]
authors = ["Rspack Teams"]
# See https://crates.io/category_slugs for a list of supported slugs
categories    = ["development-tools", "web-programming"]
documentation = "https://rspack.rs/"
edition       = "2024"
homepage      = "https://rspack.rs/"
license       = "MIT"
repository    = "https://github.com/web-infra-dev/rspack"
version       = "0.100.0-beta.3"

[workspace.metadata.cargo-shear]
ignored = ["swc", "rspack"]
[workspace.dependencies]
aho-corasick        = { version = "1.1.4", default-features = false }
anyhow              = { version = "1.0.102", default-features = false, features = ["backtrace", "std"] }
anymap              = { package = "anymap3", version = "1.0.1", default-features = false, features = ["std"] }
async-recursion     = { version = "1.1.1", default-features = false }
async-trait         = { version = "0.1.89", default-features = false }
atomic_refcell      = { version = "0.1.13", default-features = false }
base64              = { version = "0.22.1", default-features = false }
base64-simd         = { version = "0.8.0", default-features = false, features = ["alloc"] }
bitflags            = { version = "2.9.1", default-features = false }
browserslist-rs     = { version = "0.19.0", default-features = false }
bytes               = { version = "1.11.1", default-features = false }
camino              = { version = "1.2.2", default-features = false }
cargo_toml          = { version = "0.21.0", default-features = false }
cfg-if              = { version = "1.0.4", default-features = false }
chrono              = { version = "0.4.44", default-features = false }
clap                = { version = "4.5.60", default-features = false }
concat-string       = { version = "1.0.1", default-features = false }
cow-utils           = { version = "0.1.3", default-features = false }
criterion2          = { default-features = false, version = "2.0.0", features = ["async_tokio"] }
css-module-lexer    = { version = "0.0.15", default-features = false }
dashmap             = { version = "6.1.0", default-features = false }
derive_more         = { version = "2.0.1", default-features = false }
dunce               = { version = "1.0.5", default-features = false }
dyn-clone           = { version = "1.0.20", default-features = false }
either              = { version = "1.15.0", default-features = false }
enum-tag            = { version = "0.3.0", default-features = false }
fast-glob           = { version = "1.0.0", default-features = false }
form_urlencoded     = { version = "1.2.2", default-features = false }
futures             = { version = "0.3.32", default-features = false, features = ["std"] }
glob                = { version = "0.3.3", default-features = false }
hashlink            = { version = "0.10.0", default-features = false }
heck                = { version = "0.5.0", default-features = false }
hex                 = { version = "0.4.3", default-features = false, features = ["std"] }
indexmap            = { version = "2.12.1", default-features = false }
indicatif           = { version = "0.18.4", default-features = false }
indoc               = { version = "2.0.7", default-features = false }
insta               = { version = "1.42.0", default-features = false }
itertools           = { version = "0.14.0", default-features = false, features = ["use_std"] }
itoa                = { version = "1.0.17", default-features = false }
json                = { version = "0.12.4", default-features = false }
lightningcss        = { version = "1.0.0-alpha.70", default-features = false, features = ["serde"] }
md4                 = { version = "0.10.2", default-features = false }
memchr              = { version = "2.7.6", default-features = false }
micromegas-perfetto = { version = "0.9.0", default-features = false }
miette              = { version = "7.6.0", default-features = false }
mimalloc            = { version = "0.2.4", package = "mimalloc-rspack", default-features = false }
mime_guess          = { version = "2.0.5", default-features = false, features = ["rev-mappings"] }
notify              = { version = "8.2.0", default-features = false }
num-bigint          = { version = "0.4.6", default-features = false }
once_cell           = { version = "1.21.3", default-features = false }
oneshot             = { version = "0.1.11", default-features = false, features = ["std", "async"] }
owo-colors          = { version = "4.0.0", default-features = false, features = ["supports-colors"] }
parcel_sourcemap    = { version = "2.1.1", default-features = false }
paste               = { version = "1.0.15", default-features = false }
path-clean          = { version = "1.0.1", default-features = false }
pathdiff            = { version = "0.2.3", default-features = false }
pretty_assertions   = { version = "1.4.1", default-features = false, features = ["std"] }
proc-macro2         = { version = "1.0.106", default-features = false }
prost               = { version = "0.13", default-features = false }
quote               = { version = "1.0.44", default-features = false }
rayon               = { version = "1.11.0", default-features = false }
regex               = { version = "1.12.3", default-features = false, features = ["perf"] }
regex-syntax        = { version = "0.8.10", default-features = false, features = ["std"] }
regress             = { version = "0.10.5", default-features = false, features = ["pattern"] }
rspack_resolver     = { features = ["package_json_raw_json_api", "yarn_pnp"], version = "0.6.7", default-features = false }
rspack_sources      = { version = "=0.4.17", default-features = false }
rustc-hash          = { version = "2.1.1", default-features = false }
ryu-js              = { version = "1.0.2", default-features = false }
scopeguard          = { version = "1.2.0", default-features = false }
serde               = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json          = { version = "1.0.149", default-features = false, features = ["std"] }
sftrace-setup       = { version = "0.1.2", default-features = false }
sha2                = { version = "0.10.9", default-features = false }
signal-hook         = { version = "0.3.18", default-features = false, features = ["iterator"] }
simd-json           = { version = "0.17.0", default-features = false }
slotmap             = { version = "1.1.1", default-features = false }
smol_str            = { version = "0.3.5", default-features = false }
stacker             = { version = "0.1.23", default-features = false }
sugar_path          = { version = "2.0.1", default-features = false, features = ["cached_current_dir"] }
syn                 = { version = "2.0.117", default-features = false }
termcolor           = { version = "1.4.1", default-features = false }
textwrap            = { version = "0.16.1", default-features = false }
thread_local        = { version = "1.1.9", default-features = false }
tokio               = { version = "1.48.0", default-features = false, features = ["rt", "rt-multi-thread"] }
toml                = { version = "0.8.19", default-features = false, features = ["parse", "display"] }
tracing             = { version = "0.1.44", default-features = false, features = ["max_level_trace", "release_max_level_trace"] }
tracing-subscriber  = { version = "0.3.22", default-features = false, features = ["fmt", "registry"] }
trybuild            = { version = "1.0.116", default-features = false, features = ["diff"] }
unicase             = { version = "2.8.1", default-features = false }
unicode-width       = { version = "0.2.2", default-features = false }
url                 = { version = "2.5.8", default-features = false }
urlencoding         = { version = "2.1.3", default-features = false }
ustr                = { package = "ustr-fxhash", version = "1.0.1", default-features = false }
wasmparser          = { version = "0.222.0", default-features = false }
winnow              = { version = "0.7.14", default-features = false, features = ["std", "simd"] }
xxhash-rust         = { version = "0.8.15", default-features = false }

allocative = { package = "rspack-allocative", version = "0.3.5", default-features = false, features = [
  "camino",
  "dashmap",
  "hashbrown",
  "indexmap",
  "tokio",
  "once_cell",
  "ustr",
  "atomic_refcell",
] }

# Pinned
napi        = { version = "3.1.6", default-features = false }
napi-build  = { version = "2.2.3", default-features = false }
napi-derive = { version = "3.1.2", default-features = false }

# Serialize and Deserialize
inventory = { version = "0.3.17", default-features = false }
rkyv      = { version = "=0.8.8", default-features = false, features = ["std", "bytecheck"] }

# Must be pinned with the same swc versions
pnp                 = { version = "0.12.8", default-features = false }
swc                 = { version = "54.0.0", default-features = false }
swc_config          = { version = "3.1.2", default-features = false }
swc_core            = { version = "56.0.0", default-features = false, features = ["parallel_rayon"] }
swc_ecma_minifier   = { version = "44.0.0", default-features = false }
swc_error_reporters = { version = "20.0.0", default-features = false }
swc_html            = { version = "30.0.0", default-features = false }
swc_html_minifier   = { version = "44.0.0", default-features = false }
swc_node_comments   = { version = "18.0.0", default-features = false }
swc_plugin_runner   = { version = "24.0.0", default-features = false }

swc_experimental_ecma_ast      = { version = "0.5.0", default-features = false }
swc_experimental_ecma_parser   = { version = "0.5.0", default-features = false }
swc_experimental_ecma_semantic = { version = "0.5.0", default-features = false }

rspack_dojang = { version = "0.1.11", default-features = false }
tracy-client = { version = "=0.18.4", default-features = false, features = [
  "enable",
  "sampling",
  "demangle",
  "system-tracing",
] }
wasi-common = { version = "35.0.0", default-features = false }
wasmtime = { version = "35.0.0", default-features = false }


# all rspack workspace dependencies
rspack                                 = { version = "=0.100.0-beta.3", path = "crates/rspack", default-features = false }
rspack_allocator                       = { version = "=0.100.0-beta.3", path = "crates/rspack_allocator", default-features = false }
rspack_binding_api                     = { version = "=0.100.0-beta.3", path = "crates/rspack_binding_api", default-features = false }
rspack_binding_build                   = { version = "=0.100.0-beta.3", path = "crates/rspack_binding_build", default-features = false }
rspack_binding_builder                 = { version = "=0.100.0-beta.3", path = "crates/rspack_binding_builder", default-features = false }
rspack_binding_builder_macros          = { version = "=0.100.0-beta.3", path = "crates/rspack_binding_builder_macros", default-features = false }
rspack_browser                         = { version = "=0.100.0-beta.3", path = "crates/rspack_browser", default-features = false }
rspack_browserslist                    = { version = "=0.100.0-beta.3", path = "crates/rspack_browserslist", default-features = false }
rspack_cacheable                       = { version = "=0.100.0-beta.3", path = "crates/rspack_cacheable", default-features = false }
rspack_cacheable_macros                = { version = "=0.100.0-beta.3", path = "crates/rspack_cacheable_macros", default-features = false }
rspack_collections                     = { version = "=0.100.0-beta.3", path = "crates/rspack_collections", default-features = false }
rspack_core                            = { version = "=0.100.0-beta.3", path = "crates/rspack_core", default-features = false }
rspack_error                           = { version = "=0.100.0-beta.3", path = "crates/rspack_error", default-features = false }
rspack_fs                              = { version = "=0.100.0-beta.3", path = "crates/rspack_fs", default-features = false }
rspack_futures                         = { version = "=0.100.0-beta.3", path = "crates/rspack_futures", default-features = false }
rspack_hash                            = { version = "=0.100.0-beta.3", path = "crates/rspack_hash", default-features = false }
rspack_hook                            = { version = "=0.100.0-beta.3", path = "crates/rspack_hook", default-features = false }
rspack_ids                             = { version = "=0.100.0-beta.3", path = "crates/rspack_ids", default-features = false }
rspack_javascript_compiler             = { version = "=0.100.0-beta.3", path = "crates/rspack_javascript_compiler", default-features = false }
rspack_loader_lightningcss             = { version = "=0.100.0-beta.3", path = "crates/rspack_loader_lightningcss", default-features = false }
rspack_loader_preact_refresh           = { version = "=0.100.0-beta.3", path = "crates/rspack_loader_preact_refresh", default-features = false }
rspack_loader_react_refresh            = { version = "=0.100.0-beta.3", path = "crates/rspack_loader_react_refresh", default-features = false }
rspack_loader_runner                   = { version = "=0.100.0-beta.3", path = "crates/rspack_loader_runner", default-features = false }
rspack_loader_swc                      = { version = "=0.100.0-beta.3", path = "crates/rspack_loader_swc", default-features = false }
rspack_loader_testing                  = { version = "=0.100.0-beta.3", path = "crates/rspack_loader_testing", default-features = false }
rspack_location                        = { version = "=0.100.0-beta.3", path = "crates/rspack_location", default-features = false }
rspack_macros                          = { version = "=0.100.0-beta.3", path = "crates/rspack_macros", default-features = false }
rspack_napi                            = { version = "=0.100.0-beta.3", path = "crates/rspack_napi", default-features = false }
rspack_napi_macros                     = { version = "=0.100.0-beta.3", path = "crates/rspack_napi_macros", default-features = false }
rspack_paths                           = { version = "=0.100.0-beta.3", path = "crates/rspack_paths", default-features = false }
rspack_plugin_asset                    = { version = "=0.100.0-beta.3", path = "crates/rspack_plugin_asset", default-features = false }
rspack_plugin_banner                   = { version = "=0.100.0-beta.3", path = "crates/rspack_plugin_banner", default-features = false }
rspack_plugin_case_sensitive           = { version = "=0.100.0-beta.3", path = "crates/rspack_plugin_case_sensitive", default-features = false }
rspack_plugin_circular_dependencies    = { version = "=0.100.0-beta.3", path = "crates/rspack_plugin_circular_dependencies", default-features = false }
rspack_plugin_copy                     = { version = "=0.100.0-beta.3", path = "crates/rspack_plugin_copy", default-features = false }
rspack_plugin_css                      = { version = "=0.100.0-beta.3", path = "crates/rspack_plugin_css", default-features = false }
rspack_plugin_css_chunking             = { version = "=0.100.0-beta.3", path = "crates/rspack_plugin_css_chunking", default-features = false }
rspack_plugin_devtool                  = { version = "=0.100.0-beta.3", path = "crates/rspack_plugin_devtool", default-features = false }
rspack_plugin_dll                      = { version = "=0.100.0-beta.3", path = "crates/rspack_plugin_dll", default-features = false }
rspack_plugin_dynamic_entry            = { version = "=0.100.0-beta.3", path = "crates/rspack_plugin_dynamic_entry", default-features = false }
rspack_plugin_ensure_chunk_conditions  = { version = "=0.100.0-beta.3", path = "crates/rspack_plugin_ensure_chunk_conditions", default-features = false }
rspack_plugin_entry                    = { version = "=0.100.0-beta.3", path = "crates/rspack_plugin_entry", default-features = false }
rspack_plugin_esm_library              = { version = "=0.100.0-beta.3", path = "crates/rspack_plugin_esm_library", default-features = false }
rspack_plugin_externals                = { version = "=0.100.0-beta.3", path = "crates/rspack_plugin_externals", default-features = false }
rspack_plugin_extract_css              = { version = "=0.100.0-beta.3", path = "crates/rspack_plugin_extract_css", default-features = false }
rspack_plugin_hmr                      = { version = "=0.100.0-beta.3", path = "crates/rspack_plugin_hmr", default-features = false }
rspack_plugin_html                     = { version = "=0.100.0-beta.3", path = "crates/rspack_plugin_html", default-features = false }
rspack_plugin_ignore                   = { version = "=0.100.0-beta.3", path = "crates/rspack_plugin_ignore", default-features = false }
rspack_plugin_javascript               = { version = "=0.100.0-beta.3", path = "crates/rspack_plugin_javascript", default-features = false }
rspack_plugin_json                     = { version = "=0.100.0-beta.3", path = "crates/rspack_plugin_json", default-features = false }
rspack_plugin_lazy_compilation         = { version = "=0.100.0-beta.3", path = "crates/rspack_plugin_lazy_compilation", default-features = false }
rspack_plugin_library                  = { version = "=0.100.0-beta.3", path = "crates/rspack_plugin_library", default-features = false }
rspack_plugin_lightning_css_minimizer  = { version = "=0.100.0-beta.3", path = "crates/rspack_plugin_lightning_css_minimizer", default-features = false }
rspack_plugin_limit_chunk_count        = { version = "=0.100.0-beta.3", path = "crates/rspack_plugin_limit_chunk_count", default-features = false }
rspack_plugin_merge_duplicate_chunks   = { version = "=0.100.0-beta.3", path = "crates/rspack_plugin_merge_duplicate_chunks", default-features = false }
rspack_plugin_mf                       = { version = "=0.100.0-beta.3", path = "crates/rspack_plugin_mf", default-features = false }
rspack_plugin_module_info_header       = { version = "=0.100.0-beta.3", path = "crates/rspack_plugin_module_info_header", default-features = false }
rspack_plugin_module_replacement       = { version = "=0.100.0-beta.3", path = "crates/rspack_plugin_module_replacement", default-features = false }
rspack_plugin_no_emit_on_errors        = { version = "=0.100.0-beta.3", path = "crates/rspack_plugin_no_emit_on_errors", default-features = false }
rspack_plugin_progress                 = { version = "=0.100.0-beta.3", path = "crates/rspack_plugin_progress", default-features = false }
rspack_plugin_real_content_hash        = { version = "=0.100.0-beta.3", path = "crates/rspack_plugin_real_content_hash", default-features = false }
rspack_plugin_remove_duplicate_modules = { version = "=0.100.0-beta.3", path = "crates/rspack_plugin_remove_duplicate_modules", default-features = false }
rspack_plugin_remove_empty_chunks      = { version = "=0.100.0-beta.3", path = "crates/rspack_plugin_remove_empty_chunks", default-features = false }
rspack_plugin_rsc                      = { version = "=0.100.0-beta.3", path = "crates/rspack_plugin_rsc", default-features = false }
rspack_plugin_rsdoctor                 = { version = "=0.100.0-beta.3", path = "crates/rspack_plugin_rsdoctor", default-features = false }
rspack_plugin_rslib                    = { version = "=0.100.0-beta.3", path = "crates/rspack_plugin_rslib", default-features = false }
rspack_plugin_rstest                   = { version = "=0.100.0-beta.3", path = "crates/rspack_plugin_rstest", default-features = false }
rspack_plugin_runtime                  = { version = "=0.100.0-beta.3", path = "crates/rspack_plugin_runtime", default-features = false }
rspack_plugin_runtime_chunk            = { version = "=0.100.0-beta.3", path = "crates/rspack_plugin_runtime_chunk", default-features = false }
rspack_plugin_schemes                  = { version = "=0.100.0-beta.3", path = "crates/rspack_plugin_schemes", default-features = false }
rspack_plugin_size_limits              = { version = "=0.100.0-beta.3", path = "crates/rspack_plugin_size_limits", default-features = false }
rspack_plugin_split_chunks             = { version = "=0.100.0-beta.3", path = "crates/rspack_plugin_split_chunks", default-features = false }
rspack_plugin_sri                      = { version = "=0.100.0-beta.3", path = "crates/rspack_plugin_sri", default-features = false }
rspack_plugin_swc_js_minimizer         = { version = "=0.100.0-beta.3", path = "crates/rspack_plugin_swc_js_minimizer", default-features = false }
rspack_plugin_wasm                     = { version = "=0.100.0-beta.3", path = "crates/rspack_plugin_wasm", default-features = false }
rspack_plugin_web_worker_template      = { version = "=0.100.0-beta.3", path = "crates/rspack_plugin_web_worker_template", default-features = false }
rspack_plugin_worker                   = { version = "=0.100.0-beta.3", path = "crates/rspack_plugin_worker", default-features = false }
rspack_regex                           = { version = "=0.100.0-beta.3", path = "crates/rspack_regex", default-features = false }
rspack_storage                         = { version = "=0.100.0-beta.3", path = "crates/rspack_storage", default-features = false }
rspack_swc_plugin_import               = { version = "=0.100.0-beta.3", path = "crates/swc_plugin_import", default-features = false }
rspack_swc_plugin_ts_collector         = { version = "=0.100.0-beta.3", path = "crates/swc_plugin_ts_collector", default-features = false }
rspack_tasks                           = { version = "=0.100.0-beta.3", path = "crates/rspack_tasks", default-features = false }
rspack_tracing                         = { version = "=0.100.0-beta.3", path = "crates/rspack_tracing", default-features = false }
rspack_tracing_perfetto                = { version = "=0.100.0-beta.3", path = "crates/rspack_tracing_perfetto", default-features = false }
rspack_util                            = { version = "=0.100.0-beta.3", path = "crates/rspack_util", default-features = false }
rspack_watcher                         = { version = "=0.100.0-beta.3", path = "crates/rspack_watcher", default-features = false }
rspack_workspace                       = { version = "=0.100.0-beta.3", path = "crates/rspack_workspace", default-features = false }

[workspace.metadata.release]
rate-limit = { existing-packages = 70, new-packages = 70 }

# Follow servo's style https://github.com/servo/servo/blob/c95bd9d052d7eae378d31c5be0f92669cadb2c85/Cargo.toml#L175

[profile.bench]
debug     = true
lto       = false
opt-level = 0

# This is for local development
[profile.dev]
codegen-units   = 16
debug           = 2          # debug build will cause runtime panic if codegen-unints is default
incremental     = true
panic           = "abort"
split-debuginfo = "unpacked"

[profile.release-debug]
codegen-units = 16
inherits      = "dev"
opt-level     = 3
strip         = "debuginfo"

# This is for release build for users
[profile.release]
codegen-units = 1
debug         = false
# Performs "fat" LTO which attempts to perform optimizations across all crates within the dependency graph.
lto       = "fat"
opt-level = 3
panic     = "abort"
strip     = true

[profile.codspeed]
debug    = "full"
inherits = "release"
lto      = "off"
strip    = "none"

[profile.release.package]

[profile.release.package.regex-syntax]
opt-level = "s"

[profile.release.package.swc_ecma_transforms_module]
opt-level = "s"

[profile.release.package.swc_ecma_transforms_proposal]
opt-level = "s"

[profile.release.package.swc_ecma_compat_es2022]
opt-level = "s"

[profile.release.package.rspack_plugin_rsdoctor]
opt-level = "s"

[profile.release.package.swc_ecma_compat_es3]
opt-level = "s"


[profile.release.package.backtrace]
opt-level = "s"

[profile.release.package.aho-corasick]
opt-level = "s"

[profile.release.package.miette]
opt-level = "s"

[profile.release.package.pnp]
opt-level = "s"


[profile.release.package.fancy-regex]
opt-level = "s"

[profile.release.package.swc_ecma_loader]
opt-level = "s"

[profile.release.package.chrono]
opt-level = "s"

[profile.release.package.once_cell]
opt-level = "s"

[profile.release.package.rustc-demangle]
opt-level = "s"

[profile.release.package.regress]
opt-level = "s"

[profile.release.package.indicatif]
opt-level = "s"

[profile.release.package.gimli]
opt-level = "s"

[profile.release.package.regex]
opt-level = "s"

[profile.release.package.rspack_error]
opt-level = "s"


[profile.release.package.rspack_plugin_progress]
opt-level = "s"

[profile.release.package.num-bigint]
opt-level = "s"


[profile.release.package.swc_error_reporters]
opt-level = "s"

[profile.release.package.idna]
opt-level = "s"

[profile.release.package.addr2line]
opt-level = "s"

[profile.release.package.glob]
opt-level = "s"

[profile.release.package.wasmparser]
opt-level = "s"

[profile.release.package.jsonc-parser]
opt-level = "s"


[profile.release.package.textwrap]
opt-level = "s"

[profile.release.package.console]
opt-level = "s"

[profile.release.package.hashlink]
opt-level = "s"


[profile.release.package.swc_ecma_ext_transforms]
opt-level = "s"


[profile.release.package.icu_normalizer]
opt-level = "s"

[profile.release.package.rspack_plugin_banner]
opt-level = "s"

[profile.release.package.anyhow]
opt-level = "s"

[profile.release.package.oneshot]
opt-level = "s"

# This is for CI build based on release but with faster build time
[profile.ci]
codegen-units       = 256
debug               = "limited"
force-unwind-tables = true
inherits            = "release"
lto                 = false
## reduce little optimization to reduce build time
opt-level = 2
strip     = false

# This is for production for profiling production build
[profile.profiling]
debug           = "limited"
inherits        = "release"
lto             = "thin"
split-debuginfo = "off"
strip           = false

[profile.release-wasi]
debug     = 'full'
inherits  = "release"
opt-level = "s"
strip     = "none"


# the following lints rules are from https://github.com/biomejs/biome/blob/4bd3d6f09642952ee14445ed56af81a73796cea1/Cargo.toml#L7C1-L75C1
[workspace.lints.rust]
absolute_paths_not_starting_with_crate = "warn"
dead_code                              = "warn"
trivial_numeric_casts                  = "warn"
unused_import_braces                   = "warn"
unused_lifetimes                       = "warn"
unused_macro_rules                     = "warn"

[workspace.lints.rust.unexpected_cfgs]
check-cfg = ['cfg(allocative)']
level     = "warn"

[workspace.lints.clippy]
cargo_common_metadata   = "allow"
empty_docs              = "allow" # there are some false positives inside biome_wasm
multiple_crate_versions = "allow"

# pedantic
checked_conversions          = "warn"
cloned_instead_of_copied     = "warn"
copy_iterator                = "warn"
dbg_macro                    = "warn"
doc_link_with_quotes         = "warn"
empty_enums                  = "warn"
expl_impl_clone_on_copy      = "warn"
explicit_into_iter_loop      = "warn"
filter_map_next              = "warn"
flat_map_option              = "warn"
fn_params_excessive_bools    = "warn"
from_iter_instead_of_collect = "warn"
implicit_clone               = "warn"
# not sure whether it's necessary
# implicit_hasher              = "warn"
index_refutable_slice        = "warn"
inefficient_to_string        = "warn"
invalid_upcast_comparisons   = "warn"
iter_not_returning_iterator  = "warn"
large_stack_arrays           = "warn"
large_types_passed_by_value  = "warn"
macro_use_imports            = "warn"
manual_ok_or                 = "warn"
manual_string_new            = "warn"
map_flatten                  = "warn"
map_unwrap_or                = "warn"
mismatching_type_param_order = "warn"
mut_mut                      = "warn"
naive_bytecount              = "warn"
needless_bitwise_bool        = "warn"
needless_continue            = "warn"
# needless_for_each            = "warn"
no_effect_underscore_binding = "warn"
ref_binding_to_reference     = "warn"
ref_option_ref               = "warn"
stable_sort_primitive        = "warn"
uninlined_format_args        = "warn"
unnecessary_box_returns      = "warn"
unnecessary_join             = "warn"
unnested_or_patterns         = "warn"
unreadable_literal           = "warn"
verbose_bit_mask             = "warn"
zero_sized_map_values        = "warn"

# restriction
empty_drop                      = "warn"
float_cmp_const                 = "warn"
get_unwrap                      = "warn"
infinite_loop                   = "warn"
lossy_float_literal             = "warn"
rc_buffer                       = "warn"
rc_mutex                        = "warn"
rest_pat_in_fully_bound_structs = "warn"
verbose_file_reads              = "warn"
# https://github.com/rustwasm/wasm-bindgen/issues/3944
#mem_forget                      = "warn"

# performance
iter_filter_is_ok       = "warn"
iter_filter_is_some     = "warn"
iter_with_drain         = "warn"
redundant_clone         = "warn"
regex_creation_in_loops = "warn"

# regex
invalid_regex = "warn"
trivial_regex = "warn"
