[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false
authors.workspace = true
categories.workspace = true
documentation.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow   = { workspace = true }
clap     = { version = "4.4.6", features = ["derive"] }

[lints]
workspace = true
