[package]
authors.workspace       = true
categories.workspace    = true
description             = "cargo extension workflow"
documentation.workspace = true
edition.workspace       = true
homepage.workspace      = true
license.workspace       = true
name                    = "xtask"
publish                 = false
repository.workspace    = true
version                 = "0.1.0"

[dependencies]
clap = { workspace= true, features=["color", "error-context", "help", "std", "suggestions", "usage", "derive"] }
anyhow = { workspace = true }
toml = { workspace = true }
cargo_toml= { workspace= true}
serde_json = { workspace = true}

[lints]
workspace = true
