[package]
authors.workspace       = true
categories.workspace    = true
description             = "cargo extension workflow to manage rspack tasks"
documentation.workspace = true
edition.workspace       = true
homepage.workspace      = true
license.workspace       = true
name                    = "xtask"
publish                 = false
repository.workspace    = true
version                 = "0.1.0"

[dependencies]
anyhow     = { workspace = true }
cargo_toml = { workspace = true }
clap       = { workspace = true, features = ["color", "error-context", "help", "std", "suggestions", "usage", "derive"] }
serde_json = { workspace = true }
toml       = { workspace = true }

[lints]
workspace = true
