[package]
edition    = "2021"
license    = "MIT"
name       = "bench"
repository = "https://github.com/web-infra-dev/rspack"
version    = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rspack_core    = { path = "../rspack_core" }
rspack_fs      = { path = "../rspack_fs", features = ["async"] }
rspack_testing = { path = "../rspack_testing" }
tokio          = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "test-util", "parking_lot"] }

[target.'cfg(all(not(all(target_os = "linux", target_arch = "aarch64", target_env = "musl"))))'.dependencies]
mimalloc-rust  = { workspace = true }
rspack_tracing = { path = "../rspack_tracing" }
[features]
hmr     = []
tracing = []
