[package]
edition    = "2021"
license    = "MIT"
name       = "cargo-rst"
repository = "https://github.com/web-infra-dev/rspack"
version    = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
testing_macros = "0.2.5"

[dependencies]
clap           = { version = "3.2.15", features = ["derive"] }
derive_builder = "0.11.2"
glob           = "0.3.0"

colored    = "2.0.0"
serde      = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"

console = "0.15.2"
similar = { version = "2.2.0", features = ["inline"] }
tokio = { version = "1.21.0", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "test-util",
  "parking_lot",
] }
