[package]
edition    = "2021"
license    = "MIT"
name       = "cargo-rst"
repository = "https://github.com/web-infra-dev/rspack"
version    = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
testing_macros = { workspace = true }

[dependencies]
derive_builder = { workspace = true }
glob           = { workspace = true }

colored    = { workspace = true }
serde      = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

argh    = "0.1.10"
console = "0.15.7"
similar = { workspace = true, features = ["inline"] }
