[package]
edition    = "2021"
license    = "MIT"
name       = "cargo-rst"
repository = "https://github.com/web-infra-dev/rspack"
version    = "0.1.0"

[dependencies]
derive_builder = { workspace = true }
glob           = { workspace = true }

colored    = { workspace = true }
serde      = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

console = "0.15.8"
similar = { workspace = true, features = ["inline", "text", "bytes"] }
