[package]
name = "chunk_spliter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
rspack_core = { path = "../rspack_core" }
anyhow = { version = "1", features = ["backtrace"] }
petgraph = "0.6.0"
tracing = "0.1.34"

[dev-dependencies]
swc_ecma_transforms_testing = "0.80.0"
sourcemap = "6.0.2"
base64 = "0.13.0"
