[package]
edition    = "2021"
license    = "MIT"
name       = "glob_to_regexp"
repository = "https://github.com/web-infra-dev/rspack"
version    = "0.1.0"

[dependencies]
regex = { workspace = true }

[dev-dependencies]
criterion  = "0.4.0"
glob       = "0.3.1"
glob-match = "0.2.1"
globset    = "0.4.10"

[[bench]]
harness = false
name    = "bench"
