[package]
edition = "2021"
name = "rspack_loader_runner"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
url = "2.2.2"
similar-asserts = "1.2.0"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
async-trait = "0.1.53"
tokio = { version = "1.21.0", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "test-util",
] }

tracing = "0.1.34"
rspack_sources = "0.1.7"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
rspack_error = { path = "../rspack_error" }
