[package]
edition    = "2021"
license    = "MIT"
name       = "rspack_loader_runner"
repository = "https://github.com/modern-js-dev/rspack"
version    = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
similar-asserts = "1.2.0"
url             = "2.2.2"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
async-trait = "0.1.53"
rustc-hash = { workspace = true }
tokio = { version = "1.21.0", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "test-util",
  "parking_lot",
  "fs",
] }

rspack_error       = { path = "../rspack_error" }
rspack_sources     = "0.2.0"
tracing            = "0.1.34"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
