[package]
edition = "2018"
name    = "next-custom-transforms"
publish = false
version = "0.0.0"
## FIXME: bypass license check now, but it's not MIT now
license = "MIT"

[features]
plugin = ["swc_core/plugin_transform_host_native"]

[lints]
workspace = true

[dependencies]
anyhow      = { workspace = true }
chrono      = "0.4"
easy-error  = "1.0.0"
either      = "1"
fxhash      = "0.2.1"
hex         = "0.4.3"
indoc       = { workspace = true }
lazy_static = { workspace = true }
once_cell   = { workspace = true }
pathdiff    = { workspace = true }
regex       = "1.5"
rustc-hash  = "1.1.0"
serde       = { workspace = true }
serde_json  = { workspace = true, features = ["preserve_order"] }
sha1        = "0.10.1"
tracing     = { version = "0.1.37" }

modularize_imports = { version = "0.70.1" }
styled_components = { version = "0.98.1" }
styled_jsx = { version = "0.75.1" }
swc_core = { workspace = true, features = [
  "base",
  "cached",
  "common_concurrent",
  "ecma_ast",
  "ecma_loader_lru",
  "ecma_loader_node",
  "ecma_minifier",
  "ecma_parser",
  "ecma_parser_typescript",
  "ecma_preset_env",
  "ecma_quote",
  "ecma_transforms",
  "ecma_transforms_optimization",
  "ecma_transforms_react",
  "ecma_transforms_typescript",
  "ecma_utils",
  "ecma_visit",
] }
swc_emotion = { version = "0.74.1" }
swc_relay = { version = "0.46.1" }

preset_env_base         = "1.0.0"
react_remove_properties = "0.26.1"
remove_console          = "0.27.1"
