[package]
description       = "node binding"
edition.workspace = true
license           = "MIT"
name              = "rspack_node"
publish           = false
repository        = "https://github.com/web-infra-dev/rspack"
version.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
browser         = ["rspack_binding_api/browser"]
color-backtrace = ["rspack_binding_api/color-backtrace"]
debug_tool      = ["rspack_binding_api/debug_tool"]
info-level      = ["tracing/release_max_level_info"]
sftrace-setup   = ["rspack_binding_api/sftrace-setup"]

[package.metadata.cargo-shear]
# Adding napi-derive as a dependency to workaround an issue where `dts` will no longer work without it.
ignored = ["napi-derive", "tracing"]

[dependencies]
rspack_binding_api = { workspace = true }

napi-derive = { workspace = true, features = ["compat-mode", "type-def"] }
tracing     = { workspace = true }

# Enable SWC plugin feature for targets that support it, based on GitHub workflow build matrix
# 
# The SWC WASM plugin feature is only enabled for targets that:
# 1. Are actively built in our CI/CD workflows (.github/workflows/*.yml)
# 2. Support the required dependencies (wasmtime, wasi-common, etc.)
# 3. Have sufficient runtime capabilities for plugin execution
#
# Excluded targets and reasons:
# - wasm32-wasip1-threads: WASM target cannot run wasmtime plugins
# - i686-pc-windows-msvc: 32-bit Windows lacks plugin runtime support
# - aarch64-pc-windows-msvc: ARM64 Windows lacks plugin runtime support  
# - armv7-*: ARM7 targets lack plugin runtime support
#
# When adding new targets to CI, evaluate whether they should be added here.

# Linux targets (GNU libc)
[target.x86_64-unknown-linux-gnu.dependencies]
rspack_binding_api = { workspace = true, features = ["loader-swc-wasm-plugin"] }

[target.aarch64-unknown-linux-gnu.dependencies]
rspack_binding_api = { workspace = true, features = ["loader-swc-wasm-plugin"] }

# Linux targets (musl libc)
[target.x86_64-unknown-linux-musl.dependencies]
rspack_binding_api = { workspace = true, features = ["loader-swc-wasm-plugin"] }

[target.aarch64-unknown-linux-musl.dependencies]
rspack_binding_api = { workspace = true, features = ["loader-swc-wasm-plugin"] }

# Windows targets (x64 only - see exclusion comments above)
[target.x86_64-pc-windows-msvc.dependencies]
rspack_binding_api = { workspace = true, features = ["loader-swc-wasm-plugin"] }

# macOS targets
[target.x86_64-apple-darwin.dependencies]
rspack_binding_api = { workspace = true, features = ["loader-swc-wasm-plugin"] }

[target.aarch64-apple-darwin.dependencies]
rspack_binding_api = { workspace = true, features = ["loader-swc-wasm-plugin"] }

[build-dependencies]
rspack_binding_build = { workspace = true }
