[package]
description = "rspack"
edition     = "2021"
license     = "MIT"
name        = "rspack"
repository  = "https://github.com/web-infra-dev/rspack"
version     = "0.2.0"

[dependencies]
bitflags     = { workspace = true }
indexmap     = { workspace = true, features = ["rayon"] }
regex        = { workspace = true }
rspack_core  = { workspace = true }
rspack_hash  = { workspace = true }
rspack_paths = { workspace = true }
rspack_regex = { workspace = true }
rustc-hash   = { workspace = true }
serde_json   = { workspace = true }

rspack_ids               = { workspace = true }
rspack_plugin_devtool    = { workspace = true }
rspack_plugin_externals  = { workspace = true }
rspack_plugin_javascript = { workspace = true }
# rspack_plugin_lightning_css_minimizer = { workspace = true }
rspack_plugin_runtime_chunk    = { workspace = true }
rspack_plugin_swc_js_minimizer = { workspace = true }

[lints]
workspace = true
